--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.9.11"
+    "mongoose": "^5.9.11",
+    "winston": "^3.2.1",
+    "winston-mongodb": "^5.0.1"
   }
 }
