--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll --verbose --runInBand --detectOpenHandles --coverage"
+    "test": "jest --watchAll --verbose --runInBand --detectOpenHandles --coverage",
+    "start": "node index.js"
   },
   "jest": {
     "testEnvironment": "node",
     "testTimeout": 10000
+  },
+  "engines": {
+    "node": "12.16.2"
   },
   "keywords": [],
   "author": "",
